hphp/hack/test/typecheck/await_in_coroutine3.php
<?hh // strict

async function asyncFunction() {
  $a = coroutine function(AsyncIterator<string> $x) {
    foreach ($x await as $v) {
      print $x;
    }
  };
}
